jobs/2554117.out
Activated Environment
  File "test.py", line 47
    PATH = f"models/neuralnetworks/nn_{modelname}"
                                                 ^
SyntaxError: invalid syntax
Finished Job
